# compliance-checker

./: descope_check.py  lsp_test.py  pairs.py  probe_labels.py  pyproject.toml  search_transcripts.py  test_descope_check.py
.claude-plugin/: marketplace.json
compliance_checker/: __init__.py  base.py  hook.py
compliance_checker/rules/: __init__.py  dependency.py  descope.py
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: run_check.sh
tests/: test_dependency.py  test_descope.py  test_hook.py
